[gd_scene load_steps=7 format=3 uid="uid://np40witlgykd"]

[ext_resource type="Shader" path="res://resources/shaders/scrolling_background.gdshader" id="1_1vgar"]
[ext_resource type="Script" path="res://scenes/ui/game over/game_over_screen.gd" id="1_wh8po"]
[ext_resource type="Texture2D" uid="uid://u3fn5w8a5huo" path="res://graphics/background/background_tiled.png" id="2_g117x"]
[ext_resource type="FontFile" uid="uid://bmdcfdv22q7f6" path="res://resources/fonts/m5x7.ttf" id="3_526ss"]
[ext_resource type="PackedScene" uid="uid://cg05kaik72vc1" path="res://scenes/ui/better button/better_button.tscn" id="4_kt2qc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dkk7u"]
shader = ExtResource("1_1vgar")
shader_parameter/speed = 0.5

[node name="GameOverScreen" type="CanvasLayer"]
script = ExtResource("1_wh8po")
insults = Array[String](["holy sh*t, you suck at this!", "skill issue", "you've got old person reflexes", "i'M A pRoFEsSioNaL", "git gud lmao", "are ya winning, son?", "it wasn't lag, you're just bad", "maybe touching some grass will help?", "i feel bad for you"])

[node name="BackgroundTextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_dkk7u")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_g117x")
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="GameOverLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
clip_contents = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[wave amp=50.0 freq=5.0][center]game over[/center][/wave]"
fit_content = true
autowrap_mode = 0

[node name="InsultLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.639216, 0.639216, 0.639216, 1)
clip_contents = false
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_526ss")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[wave amp=20.0 freq=5.0][center]holy sh*t, you're actually bad at this[/center][/wave]"
fit_content = true
autowrap_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 24
theme_override_constants/margin_bottom = 24

[node name="FlowContainer" type="FlowContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 0
alignment = 1

[node name="TimeVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/FlowContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TimeHeadingLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MarginContainer/FlowContainer/TimeVBoxContainer"]
modulate = Color(0.639216, 0.639216, 0.639216, 1)
clip_contents = false
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_526ss")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[wave amp=20.0 freq=5.0][center]time[/center][/wave]"
fit_content = true
autowrap_mode = 0

[node name="TimeLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MarginContainer/FlowContainer/TimeVBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.305882, 0.631373, 0.866667, 1)
clip_contents = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/normal_font_size = 0
bbcode_enabled = true
text = "00:16"
fit_content = true
autowrap_mode = 0

[node name="ScoreVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/FlowContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ScoreHeadingLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MarginContainer/FlowContainer/ScoreVBoxContainer"]
modulate = Color(0.639216, 0.639216, 0.639216, 1)
clip_contents = false
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_526ss")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[wave amp=20.0 freq=5.0][center]score[/center][/wave]"
fit_content = true
autowrap_mode = 0

[node name="ScoreLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MarginContainer/FlowContainer/ScoreVBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 0.796078, 0.431373, 1)
clip_contents = false
layout_mode = 2
size_flags_horizontal = 4
bbcode_enabled = true
text = "12"
fit_content = true
autowrap_mode = 0

[node name="HighScoreVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/FlowContainer"]
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

[node name="BestHeadingLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MarginContainer/FlowContainer/HighScoreVBoxContainer"]
modulate = Color(0.639216, 0.639216, 0.639216, 1)
clip_contents = false
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_526ss")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[wave amp=20.0 freq=5.0][center]best[/center][/wave]"
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/FlowContainer/HighScoreVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="HighestTimeLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MarginContainer/FlowContainer/HighScoreVBoxContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.305882, 0.631373, 0.866667, 1)
clip_contents = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "12:34"
fit_content = true
autowrap_mode = 0

[node name="HighScoreLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MarginContainer/FlowContainer/HighScoreVBoxContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 0.796078, 0.431373, 1)
clip_contents = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "371"
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16
alignment = 1

[node name="RetryButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_kt2qc")]
unique_name_in_owner = true
layout_mode = 2
text = "retry"
color = Color(0.282353, 0.756863, 0.411765, 1)

[node name="MenuButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_kt2qc")]
unique_name_in_owner = true
layout_mode = 2
text = "menu"
color = Color(0.878431, 0.25098, 0.364706, 1)

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
